# llmmllab-api

./: .env.example  .gen3dfail.txt  .gitignore  2026-06-06-124933-address-the-review-left-by-me-as-well-as-the-comm.txt  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  composer_init.py  config.py  pyproject.toml
.claude/memory/: api-wrong-model-fallback.md  deploy-cuts-active-sessions.md  llmmllab-api-token-and-overflow-context.md
.github/workflows/: deploy.yml
agents/: README.md  base.py  embed.py
db/: __init__.py  maintenance.py  multi_tier_cache.py  redis_client.py
docs/: 2026-05-21-22-session.md  ROSIE_ROADMAP.md  generate_3d_models.md  ide-workflow.md  stale-server-recovery.md
docs/emails/: gog-metadata-format-usage.md
graph/: content_parser.py  errors.py  executor.py  service.py  state.py
graph/middleware/: summarization_middleware.py
graph/nodes/: agent.py  server_tools.py
graph/workflows/: base.py
k8s/: deployment.yaml  env.yaml
k8s/observability/: grafana.yaml  loki.yaml  prometheus.yaml  promtail.yaml
middleware/: api_metrics.py  auth.py  priority.py  tracing.py
models/: __init__.py  model_parameters.py  model_provider.py  request_metadata.py  request_priority_metadata.py
models/anthropic/: create_message_request.py
models/openai/: create_chat_completion_request.py
patches/: langchain_reasoning.py
routers/: chat.py  runner_admin.py  session_admin.py
routers/anthropic/: messages.py
routers/openai/: audio.py  chat.py  embeddings.py  images.py  import_routers.py
scripts/: README.md  img2-3d.sh  img2img.sh  mesh2parts.sh  rembg.sh  test_img2-3d-parts.sh  test_img2-3d.sh  test_img2img.sh  test_rembg.sh  test_txt2img.sh  triage_close.py  txt2img.sh
services/: __init__.py  audio_service.py  completion_service.py  completion_state.py  continuation_logic.py  image_service.py  model_service.py  overflow_recovery.py  priority_queue.py  prompt_templates.py  queue_callbacks.py  queue_exceptions.py  redis_priority_queue.py  response_handlers.py  retry_policies.py  runner_admin_service.py  runner_client.py  session_registry.py  session_tracking.py  token_counter.py  tool_service.py  truncation.py  tts_service.py
test/integration/: test_maintenance.py  test_redis_queue_integration.py
test/unit/: test_agent_retry.py  test_agent_stale_detection.py  test_ainvoke_abort.py  test_anthropic_messages_helpers.py  test_base_agent.py  test_chat_router.py  test_cold_start_retry.py  test_completion_service_retry.py  test_context_exceeded.py  test_context_overflow.py  test_context_truncation.py  test_count_input_tokens.py  test_dialog_builder.py  test_disconnect_wiring.py  test_embeddings_router.py  test_hallucinated_tool_handling.py  (+34 more)
tools/: mcp_client.py  registry.py  server_tool_executor.py
utils/: logging.py  message_conversion.py
(+17 files in other folders)
