[project]
name = "llmmllab-api"
version = "0.1.0"
description = "Flexible API server for LLM-based applications built on top of LangGraph with minimal LangChain usage"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "LongStoryMedia" }]
license = { text = "MIT" }

dependencies = [
    # FastAPI / web server
    "fastapi==0.116.2",
    "uvicorn==0.35.0",
    "websockets==15.0.1",
    "aiohttp==3.12.15",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "requests>=2.32.0",

    # LangChain / LangGraph
    # langchain-core provides BaseTool, BaseChatModel, Embeddings, messages, tool decorator
    # langchain (full package) is kept only for create_agent, AgentMiddleware, ProviderStrategy, ToolRuntime
    # langchain-community was removed — SearxNG now uses native httpx wrapper
    "langchain>=1.2.0",
    "langchain-core>=1.3.0",
    "langgraph>=1.1.0",
    "langgraph-checkpoint>=2.0.0,<3.0.0",
    "langgraph-checkpoint-postgres==2.0.0",
    "langchain-openai>=1.1.0",
    "langchain-anthropic>=1.4.0",

    # Model stack
    "huggingface-hub==0.35.0",

    # Storage
    "redis==6.4.0",
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "psycopg[binary]==3.2.12",
    "psycopg2-binary==2.9.11",
    "faiss-cpu==1.12.0",

    # Image processing
    "Pillow==11.3.0",

    # Core utils
    "pydantic==2.11.9",
    "python-dotenv==1.1.1",
    "packaging==25.0",
    "tenacity==9.1.2",
    "watchfiles==1.1.0",
    "tqdm==4.67.1",

    # Auth
    "pyjwt[crypto]==2.10.1",
    "cryptography==45.0.7",

    # Observability
    "prometheus-client==0.22.1",
    "structlog==25.4.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",

    # Scheduling
    "apscheduler==3.11.0",

    # Third-party AI services
    "openai-harmony==0.0.4",

    # Web / scraping
    "beautifulsoup4==4.14.2",
    "playwright==1.52.0",

    # Build-time helpers kept as runtime deps because some packages reference them at import time
    "ninja==1.13.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio>=0.21.0",
    "aioresponses==0.7.8",
    "pyright>=1.1.0",
    "ruff>=0.6.0",
    "testcontainers[postgres]>=4.0.0",
    "pytest-cov>=7.1.0",
]

# uv treats this project as "virtual" (no [build-system] present), so `uv sync`
# installs dependencies into .venv without trying to build/install the project
# itself. Application packages (server, runner, composer, db, utils, models)
# are imported via PYTHONPATH=/app at runtime.

[tool.uv]
package = false
